# fastapi-task-manager

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CLAUDE.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  about.html  features.html  index.html  mkdocs.yml  pre_commit_prune_stale_tags.py  pyproject.toml  todo.md  usage.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  publish.yml
about/: index.html  people.html
assets/: brand-colors.css  extra.css
assets/javascripts/: termynal-reload.js
docs/docs/: CNAME  about.md  features.md  index.md
docs/docs/about/: index.md  people.md
docs/docs/assets/: brand-colors.css  extra.css
docs/docs/assets/javascripts/: termynal-reload.js
docs/docs/learn/: api-reference.md  architecture.md  deployment.md  dynamic-tasks.md
docs/docs/learn/getting_started/: configurations.md  first-step.md  index.md  installation.md
docs_src/tutorial/: base_example_py310.py  configurations_py310.py  dynamic_tasks_py310.py  dynamic_tasks_python_py310.py  retry_backoff_py310.py
learn/: api-reference.html  architecture.html  deployment.html  dynamic-tasks.html  getting-started.html
learn/getting_started/: configurations.html  first-step.html  index.html  installation.html
release_notes/: index.html
search/: search_index.json
src/fastapi_task_manager/: __init__.py  async_utils.py  config.py  coordinator.py  force_acquire_semaphore.py  leader_election.py  reconciler.py  redis_keys.py  runner.py  statistics.py  stream_consumer.py  task_group.py  task_manager.py  task_router_services.py
src/fastapi_task_manager/schema/: health.py  task.py  task_group.py  worker_identity.py
tests/: test_async_utils.py  test_config.py  test_coordinator.py  test_dynamic_tasks.py  test_leader_election.py  test_reconciler.py  test_redis_keys.py  test_runner.py  test_schemas.py  test_statistics.py  test_stream_consumer.py  test_task_group.py  test_task_manager.py  test_task_router_services.py  test_worker_identity.py
